# Bharat-Forge-Inter-IIT-24

./: .gitignore  README.md  readme.md  td3_agent.py
Models/: PPO.ipynb  PPO.py  README.md  actor.py  basic  dont.py  environment.py  lidaradjusted.py  main.py  newopn.py  noname.py  ppo_model.py  ppo_weights.pth  reward.py
SLAM/install/: local_setup.sh  setup.sh
SLAM/install/slam/share/slam/: package.xml
SLAM/install/slam/share/slam/launch/: slam_launch.py
SLAM/install/slam/share/slam/urdf/: gazebo_plugins.xacro
SLAM/src/: bot_details.md
SLAM/src/robot_gazebo/world/: empty.world
SLAM/src/slam/: setup.py
SLAM/src/slam/launch/: launch.py
SLAM/src/slam/urdf/: base.xacro
install/: local_setup.sh  setup.sh
install/robot_gazebo/lib/robot_gazebo/: map_merger  master_controller  position_publisher
install/robot_gazebo/share/robot_gazebo/: package.sh
install/slam/lib/slam/: camera_node  nearest_bot  reward.py
install/slam/share/slam/: package.sh  package.xml
install/zinger_description/share/zinger_description/: local_setup.sh  package.sh
install/zinger_ignition/share/zinger_ignition/: local_setup.sh  package.sh
install/zinger_swerve_controller/share/zinger_swerve_controller/: package.sh
install/zinger_viz/share/zinger_viz/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
slam_working_code/SLAM/: frames_2024-11-17_00.55.08.gv  frames_2024-11-17_01.05.37.gv
slam_working_code/SLAM/install/: setup.bash  setup.ps1  setup.sh  setup.zsh
slam_working_code/SLAM/log/: latest_build
slam_working_code/SLAM/src/slam/: package.xml  setup.py
src/: bot_details.md  readme.md  turtlebot3.repos
src/autobots/: package.xml  setup.cfg  setup.py
src/autobots/autobots/: waypoint_follower.py  waypoint_follower_robot2.py  waypoint_follower_robot3.py
src/autobots/config/: config.yaml
src/autobots/launch/: autobot_launch.py  multi_robot_launch.py  robot2_launch.py  robot3_launch.py  singlebot.py
src/autobots/urdf/: model.urdf.xacro  moving_bot.urdf.xacro  moving_bot_base.xacro
src/robot_gazebo/: package.xml  setup.py
src/robot_gazebo/launch/: position_publisher_launch.py  world_launch.py
src/robot_gazebo/robot_gazebo/: map_merger.py  position_publisher.py
src/robot_gazebo/world/: factory.world
src/slam/: package.xml  setup.py
src/slam/config/: controller_robot_1.yaml  mapper_params_online_async.yaml  nav2_multirobot_params_1.yaml  slam.rviz
src/slam/launch/: launch.py
src/slam/models/: environment.py  ppo (1).py  ppo.py  ppo_model.py  ppo_weights.pth  reward.py
src/slam/models/PPO/: actor_network.py  agent.py  critic_network.py  environment.py  main2.py  plot.py  ppo_memory.py
src/slam/slam/: astar_controller.py  exploration_reward.py  laser_filter.py  nearest_bot_node.py  operatorNode.py  ppo_model.py  ppo_weights.pth
src/slam/urdf/: car.urdf.xacro  lidar.xacro  robot.urdf.xacro
src/tb3_autonomy/: CMakeLists.txt  package.xml
src/tb3_autonomy/include/: autonomy_node.h  navigation_behaviors.h
src/tb3_autonomy/launch/: autonomy.launch.py
src/tb3_autonomy/src/: autonomy_node.cpp  navigation_behaviors.cpp
src/zinger_description/urdf/: base.urdf  gazebo.xacro
src/zinger_ignition/launch/: ignition.launch.py
turtlebot3_ws/: frames_2024-12-02_21.18.39.gv  frames_2024-12-02_22.09.39.gv
turtlebot3_ws/install/: local_setup.sh  setup.sh
turtlebot3_ws/log/: latest_build
turtlebot3_ws/src/scan_throttler/: setup.cfg
turtlebot3_ws_REMOVE_IF_DOESN'T_NEEDED/src/scan_throttler/: setup.py
(+329 files in other folders)
