<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pathanaffan62@gmail.com">cobaltboy</maintainer>
  <license>TODO: License declaration</license>
  
  <!-- Core ROS2 Python dependencies -->
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Robot description and state -->
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <!-- Controllers -->
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>

  <!-- Simulation -->
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros2_control</depend>

  <!-- SLAM and Navigation -->
  <depend>slam_toolbox</depend>
  <depend>nav2_bringup</depend>
  <depend>nav_msgs</depend>

  <!-- Visualization -->
  <depend>rviz2</depend>

  <!-- Teleop -->
  <depend>teleop_twist_keyboard</depend>

  <!-- Python specific test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
