<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>slam</name>
  <version>0.0.0</version>
  <description>A Package for simulation for autonomous mapping and navigation of any unknown terrain</description>
  <maintainer email="pathanaffan62@gmail.com">Cobaltboy</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>diff_drive_controller</depend>
  <depend>ros2_control</depend>
  <depend>xacro</depend>
  <depend>joint_state_broadcaster</depend>
  <depend>sensor_msgs</depend>
  <depend>ros2_controllers</depend>
  <depend>gazebo_ros2_control</depend>
  <depend>slam_toolbox</depend>
  <depend>geometry_msgs</depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
